--- a/notebooks/traffic_congestion.ipynb
+++ b/notebooks/traffic_congestion.ipynb
@@ -521,6 +521,7 @@
     "        ax.legend(loc=\"best\")\n",
     "\n",
     "    plt.tight_layout()\n",
+    "    plt.savefig(f\"./data/{title}.png\")\n",
     "    plt.show()"
    ]
   },
@@ -685,6 +686,7 @@
     "plt.legend()\n",
     "plt.grid(True, alpha=0.3)\n",
     "plt.tight_layout()\n",
+    "plt.savefig(\"./data/rf-recall-f1.png\")\n",
     "plt.show()\n",
     "\n",
     "# =================================================== #"
@@ -729,6 +731,7 @@
     "plt.legend()\n",
     "plt.grid(True, alpha=0.3)\n",
     "plt.tight_layout()\n",
+    "plt.savefig(\"./data/logreg-recall-f1.png\")\n",
     "plt.show()\n",
     "# =================================================== #"
    ]
@@ -770,6 +773,7 @@
     "plt.legend()\n",
     "plt.grid(True, alpha=0.3)\n",
     "plt.tight_layout()\n",
+    "plt.savefig(\"./data/svm-recall-f1.png\")\n",
     "plt.show()\n",
     "# =================================================== #"
    ]
@@ -813,6 +817,7 @@
     "plt.legend()\n",
     "plt.grid(True, alpha=0.3)\n",
     "plt.tight_layout()\n",
+    "plt.savefig(\"./data/knn-recall-f1.png\")\n",
     "plt.show()\n",
     "# =================================================== #"
    ]
@@ -871,6 +876,7 @@
     "    axes[1].set_title(f\"{model_name} – ROC Curve\")\n",
     "    axes[1].legend(loc=\"lower right\")\n",
     "    plt.tight_layout()\n",
+    "    plt.savefig(f\"./data/{model_name}-metrics.png\")\n",
     "    plt.show()\n",
     "\n",
     "    return {\n",
@@ -966,6 +972,7 @@
     "plt.xlabel(\"Queue Length\")\n",
     "plt.ylabel(\"Lane Occupancy\")\n",
     "plt.tight_layout()\n",
+    "plt.savefig(\"./data/traffic_congestion_hm1.png\")\n",
     "plt.show()"
    ]
   },
@@ -1006,6 +1013,8 @@
     "plt.title(\"Traffic Congestion Heatmap (Density vs Speed)\")\n",
     "plt.xlabel(\"Average Speed\")\n",
     "plt.ylabel(\"Vehicle Density\")\n",
+    "plt.tight_layout()\n",
+    "plt.savefig(\"./data/traffic_congestion_hm2.png\")\n",
     "plt.show()"
    ]
   },
@@ -1194,7 +1203,7 @@
     "    plt.ylabel(\"Speed (Scaled)\")\n",
     "\n",
     "plt.tight_layout()\n",
-    "plt.savefig(\"best_params_boundaries.png\")\n",
+    "plt.savefig(\"./data/best_params_boundaries.png\")\n",
     "plt.show()"
    ]
   },
